Fixed the gap of the grid in mobile version

--- a/app/design/frontend/Vass/PU/Magento_Catalog/web/css/source/_extend.less
+++ b/app/design/frontend/Vass/PU/Magento_Catalog/web/css/source/_extend.less
@@ -13,7 +13,7 @@
         .product-items {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 24px;
+            gap: 24px 16px;
     
             .product-item {
                 width: 100%;
@@ -204,6 +204,7 @@
     body.catalog-category-view {
         .product-items {
             grid-template-columns: repeat(3, 1fr);
+            gap: 24px;
         }
     }
 
